--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@
 							<article id="project">
 								<h2 class="major">Project</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Autonomous vehicles, also known as self-driving cars using a combination of sensors, cameras, radar, Lidar, and onboard computers to perceive their surroundings, make decisions, and navigate safely.
-</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p>Autonomous vehicles, also known as self-driving cars using a combination of sensors, cameras, radar, Lidar, and onboard computers to perceive their surroundings, make decisions, and navigate safely.</p>
+								<p>Key components of autonomous vehicles include: Sensors, Perception Systems, Decision-Making Systems, and Actuators</p>
 							</article>
 		
 
