--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 						<!-- project -->
 							<article id="project">
 								<h2 class="major">Project</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								<span class="image main"><img src="images/autonomousVe.jpeg" alt="" /></span>
 								<p>Autonomous vehicles, also known as self-driving cars using a combination of sensors, cameras, radar, Lidar, and onboard computers to perceive their surroundings, make decisions, and navigate safely.</p>
-								<p>Key components of autonomous vehicles include: Sensors, Perception Systems, Decision-Making Systems, and Actuators</p>
+								<p>Key components of autonomous vehicles include: sensors, perception systems, decision-making systems, and actuators. One of the most crucial factors in researching correctness guarantees for machine learning algorithms used in self-driving cars is ensuring safe reinforcement learning and verification of neural networks. In particular, I research the safe reinforcement learning and verification of neural networks resilient and safety.</p>
 							</article>
 		
 
